# solarsystem

./: CMakeLists.txt  camera.cpp  main.cpp  navigationcontrols.cpp  navigationcontrols.h  object.cpp  object.h  pointlight.cpp  pointlight.h  readme.md  shader.cpp  shader.h  texture.cpp  userinterface.cpp  userinterface.h
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
